<resources>
    <string name="app_name">Chat Apk</string>
    <string name="developed_by_mohitkumar_soni">developed by: Mohitkumar Soni</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enter_otp_sent_to_you">Enter OTP sent to you</string>
    <string name="otp_code">OTP code</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="username">Username</string>
    <string name="hello_mohit">hello mohit</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_user">Search User</string>
    <string name="username1">Username</string>
    <string name="todo">TODO</string>
    <string name="write_message">Write message</string>
    <string name="phone">Phone</string>
</resources>