<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="100"
    android:padding="10dp"
    android:background="@color/grey"
    tools:context=".OTP_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="15"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/dracula">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:text="@string/_1"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/dracula">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>



    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="15"
        android:contentDescription="@string/app_name"
        android:src="@drawable/otp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp_sent_to_you"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:fontFamily="@font/digital_desolation_alternate"
        android:layout_weight="1"
        android:letterSpacing="0.03"
        android:textStyle="bold"
        android:textColor="@color/dracula"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="8"
        android:orientation="horizontal">




        <EditText
            android:id="@+id/login_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp_code"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="22sp"
            android:autofillHints="phone"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:elevation="4sp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="10">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/login_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/off_white"
            android:layout_alignParentEnd="true"
            android:src="@drawable/save_ic"
            android:contentDescription="@string/app_name" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:indeterminateTint="@color/dracula"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/login_next"
            android:layout_margin="10dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/resend_otp_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp_in_30_sec"
        android:textAlignment="center"
        android:textSize="11sp"
        android:textColor="@color/dracula"
        android:fontFamily="@font/digital_desolation_alternate"/>


</LinearLayout>