<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="100"
    android:padding="10dp"
    android:background="@color/grey"
    tools:context=".Login_username_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="15"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/dracula">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_1"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/dracula">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>



    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="15"
        android:src="@drawable/person_ic"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="8"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="22sp"
            android:autofillHints="phone"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:elevation="4sp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="10">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/login_let_me_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/off_white"
            android:layout_alignParentEnd="true"
            android:src="@drawable/save_ic"
            android:contentDescription="@string/app_name" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:indeterminateTint="@color/dracula"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/login_let_me_in_btn"
            android:layout_margin="10dp"/>



    </RelativeLayout>


</LinearLayout>