<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_margin="10dp"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="@color/off_white"
        android:src="@drawable/person_ic"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:autofillHints="phone"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_bg_1"
        android:elevation="4sp"/>

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="22sp"
        android:textColor="@color/grey"
        android:autofillHints="phone"
        android:layout_margin="10dp"
        android:enabled="false"
        android:background="@drawable/edittext_bg_1"
        android:elevation="4sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/off_white"
            android:layout_alignParentEnd="true"
            android:src="@drawable/save_ic"
            android:contentDescription="@string/app_name" />

        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:indeterminateTint="@color/dracula"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/profile_update_btn"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/profile_logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FF0000"/>

    </RelativeLayout>

</LinearLayout>