<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".SearchUserActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/dracula">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_user"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/back_btn"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="10dp"
            app:tint="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/search_user_layout"
        android:layout_below="@id/toolbar">

        <EditText
            android:id="@+id/search_user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/search_user_btn"
            android:background="@drawable/edittext_bg_1"
            android:elevation="8dp"
            android:hint="@string/username1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/search_user_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/icon_search"
            app:tint="@color/black"
            android:contentDescription="@string/todo" />



    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_user_layout"
        android:padding="10dp"/>



</RelativeLayout>