<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/dracula">

        <TextView
            android:id="@+id/other_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_pic_layout"
            android:layout_centerVertical="true"/>

        <include layout="@layout/profile_picture_view"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/back_btn"
            android:id="@+id/profile_pic_layout"/>

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-1dp"
        android:background="@color/off_white" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:background="@color/off_white"
        android:padding="8dp">

        <EditText
            android:id="@+id/chat_message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/message_send_button"
            android:background="@drawable/edittext_bg_1"
            android:hint="@string/write_message"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <ImageButton
            android:id="@+id/message_send_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:elevation="10dp"
            android:src="@drawable/icon_send"
            app:tint="@color/black" />


    </RelativeLayout>

</RelativeLayout>